# Enterprise-File-Automation

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.example.yaml
src/enterprise_file_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/file_automation/: __init__.py  app.py  config.py  exceptions.py  hashing.py  logger.py  main.py  models.py  notifier.py  pipeline.py  scheduler.py  state.py  watcher.py
src/file_automation/processors/: __init__.py  backup.py  base.py  classifier.py  compressor.py  converter.py  encryptor.py  renamer.py
tests/: conftest.py  test_cli.py  test_config.py  test_notifier.py  test_pipeline.py  test_processors.py  test_scheduler.py  test_state.py  test_watcher.py
